--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ main {
   background-color: #ffffff;
   /* emulate mt-3 */
   margin-top: 1rem;
+  padding: 2rem !important;
 }
 
 @media only screen and (min-width: 992px) {
